# Physical-AI-Humanoid-Robotics-textbook

./: .gitignore  404.html  CLAUDE.md  README.md  book-content-source.md  docusaurus.config.ts  index.html  main.py  markdown-page.html  package.json  pyproject.toml  sitemap.xml  test_agent_validator.py  test_auth.py
.claude/: settings.local.json
.claude/agents/: auth-agent.md  robotics-textbook-creator.md
.claude/commands/: sp.adr.md  sp.analyze.md  sp.checklist.md  sp.clarify.md  sp.constitution.md  sp.implement.md  sp.plan.md  sp.specify.md  sp.tasks.md
.github/workflows/: deploy.yml
.specify/memory/: agent-context.md  constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: pyproject.toml
api/auth/: database.py  middleware.py
api/auth/models/: models.py
api/auth/routers/: auth_router.py
api/auth/utils/: jwt.py  password.py
api/src/: main.py
api/src/services/: agent_validator.py  rag_service.py
api/tests/unit/: test_agent_validator.py
assets/css/: styles.f6ff0187.css
assets/js/: 080246e8.fba887f2.js  0e384e19.33497886.js  17896441.be3c53d6.js  1839732f.25b2bc58.js  18a5b9a3.84372e48.js  1da99c18.408ccbc5.js  1df93b7f.536b0cdf.js  1f391b9e.6f40a9d4.js  237.b3dc1b25.js  285.87664fbb.js  (+21 more)
book_source/: docusaurus.config.ts  package-lock.json  package.json  server.js  sidebars.ts
docs/: intro.html  intro.md  module-1-introduction-to-physical-ai.html  module-2-ros2-fundamentals.html  module-3-gazebo-simulation.html  module-4-nvidia-isaac-platform.html
scripts/: generate_embeddings.py  pyproject.toml
(+175 files in other folders)
